upd16: update cleanup util
